hoofddorp office upgrade

--- a/EBC App/www/exhibit1.html
+++ b/EBC App/www/exhibit1.html
@@ -84,6 +84,7 @@
                             <div class="center">
                                 <div class="spot-container">
                                     <div class="product">
+                                        <a href="index.html" class="myButton1">HOME</a>
                                         <img src="media/exhibit1/product-0.png" class="prodImg">
                                     </div>
                                     <div id="spot1-off" class="spot"></div>
