added home button to exhibits

--- a/EBC App/www/exhibit1.html
+++ b/EBC App/www/exhibit1.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
         <link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css" />
         <script src="js/jquery-1.11.1.min.js"></script>
-        <script src="js/jquery.mobile-1.4.5.min.js"></script>
+
         <script src="js/jquery-ui.min.js"></script>
         <!-- Link Swiper's CSS -->
         <link rel="stylesheet" href="css/swiper.css">
@@ -84,7 +84,7 @@
                             <div class="center">
                                 <div class="spot-container">
                                     <div class="product">
-                                        <a href="index.html" class="myButton1">HOME</a>
+                                        <a href="index.html" class="myButton">HOME</a>
                                         <img src="media/exhibit1/product-0.png" class="prodImg">
                                     </div>
                                     <div id="spot1-off" class="spot"></div>
@@ -146,6 +146,7 @@
                             <div class="center">
                                 <div class="spot-container">
                                     <div class="product">
+                                        <a href="index.html" class="myButton">HOME</a>
                                         <img src="media/exhibit1/product-1.png" id="bbfit" class="prodImg">
                                     </div>
                                     <div id="spot4-off" class="spot"></div>
@@ -207,6 +208,7 @@
                             <div class="center">
                                 <div class="spot-container">
                                     <div class="product">
+                                        <a href="index.html" class="myButton">HOME</a>
                                         <img src="media/exhibit1/product-2.png" class="prodImg">
                                     </div>
                                     <div id="spot7-off" class="spot"></div>
@@ -268,6 +270,7 @@
                             <div class="center">
                                 <div class="spot-container">
                                     <div class="product">
+                                        <a href="index.html" class="myButton">HOME</a>
                                         <img src="media/exhibit1/product-3.png" id="bb500">
                                     </div>
                                     <div id="spot10-off" class="spot"></div>
