--- a/EBC App/www/exhibit3.html
+++ b/EBC App/www/exhibit3.html
@@ -6,7 +6,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
         <link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css" />
         <script src="js/jquery-1.11.1.min.js"></script>
-        <script src="js/jquery.mobile-1.4.5.min.js"></script>
         <script src="js/jquery-ui.min.js"></script>
         <!-- Link Swiper's CSS -->
         <link rel="stylesheet" href="css/swiper2.css">
@@ -82,6 +81,7 @@
                             <div class="center">
                                 <div class="spot-container">
                                     <div class="product">
+                                        <a href="index.html" class="myButton">HOME</a>
                                         <img src="media/exhibit3/product-0.png" id="voyager-focus" class="prodImg">
                                     </div>
                                     <div id="spot1-off" class="spot"></div>
@@ -140,6 +140,7 @@
                             <div class="center">
                                 <div class="spot-container">
                                     <div class="product">
+                                        <a href="index.html" class="myButton">HOME</a>
                                         <img src="media/exhibit3/product-1.png" id="voyager-5200" class="prodImg">
                                     </div>
                                     <div id="spot4-off" class="spot"></div>
@@ -200,6 +201,7 @@
                             <div class="center">
                                 <div class="spot-container">
                                     <div class="product">
+                                        <a href="index.html" class="myButton">HOME</a>
                                         <img src="media/exhibit3/product-2.png" class="prodImg">
                                     </div>
                                     <div id="spot7-off" class="spot"></div>
@@ -261,6 +263,7 @@
                             <div class="center">
                                 <div class="spot-container">
                                     <div class="product">
+                                        <a href="index.html" class="myButton">HOME</a>
                                         <img src="media/exhibit3/product-3.png" id="voyager-edge" class="prodImg">
                                     </div>
                                     <div id="spot10-off" class="spot"></div>
@@ -322,6 +325,7 @@
                             <div class="center">
                                 <div class="spot-container">
                                     <div class="product">
+                                        <a href="index.html" class="myButton">HOME</a>
                                         <img src="media/exhibit3/product-4.png" id="voyager-8200" class="prodImg">
                                     </div>
                                     <div id="spot13-off" class="spot"></div>
