--- a/EBC App/www/exhibit2.html
+++ b/EBC App/www/exhibit2.html
@@ -6,7 +6,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
         <link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css" />
         <script src="js/jquery-1.11.1.min.js"></script>
-        <script src="js/jquery.mobile-1.4.5.min.js"></script>
         <script src="js/jquery-ui.min.js"></script>
         <!-- Link Swiper's CSS -->
         <link rel="stylesheet" href="css/swiper.css">
@@ -78,6 +77,7 @@
                             <div class="center">
                                 <div class="spot-container">
                                     <div class="product">
+                                        <a href="index.html" class="myButton">HOME</a>
                                         <img src="media/exhibit2/product-0.png" class="prodImg">
                                     </div>
                                     <div id="spot1-off" class="spot"></div>
@@ -138,6 +138,7 @@
                             <div class="center">
                                 <div class="spot-container">
                                     <div class="product">
+                                        <a href="index.html" class="myButton">HOME</a>
                                         <img src="media/exhibit2/product-1.png" class="prodImg">
                                     </div>
                                     <div id="spot4-off" class="spot"></div>
@@ -198,6 +199,7 @@
                             <div class="center">
                                 <div class="spot-container">
                                     <div class="product">
+                                        <a href="index.html" class="myButton">HOME</a>
                                         <img src="media/exhibit2/product-2.png" id="calisto" class="prodImg">
                                     </div>
                                     <div id="spot7-off" class="spot"></div>
@@ -258,6 +260,7 @@
                             <div class="center">
                                 <div class="spot-container">
                                     <div class="product">
+                                        <a href="index.html" class="myButton">HOME</a>
                                         <img src="media/exhibit2/product-3.png" class="prodImg">
                                     </div>
                                     <div id="spot10-off" class="spot"></div>
