adding exhibit 2 to plamex

--- a/EBC_App/www/exhibit1.html
+++ b/EBC_App/www/exhibit1.html
@@ -9,7 +9,7 @@
         <script src="js/jquery.mobile-1.4.5.min.js"></script>
         <script src="js/jquery-ui.min.js"></script>
         <!-- Link Swiper's CSS -->
-        <link rel="stylesheet" href="css/swiper.css">
+        <link rel="stylesheet" href="css/swiper2.css">
         <link rel="stylesheet" href="css/style_exhibit1.css">
         <link href="css/lato.css" rel="stylesheet">
         <link href="css/roboto.css" rel="stylesheet">
@@ -22,8 +22,6 @@
                     <ul class="slideShow">
                         <li><img src="media/exhibit1/slide1.png"></li>
                         <li><img src="media/exhibit1/slide2.png"></li>
-                        <li><img src="media/exhibit1/slide3.png"></li>
-                        <li><img src="media/exhibit1/slide4.png"></li>
                     </ul>
                 </div>
             </div>
@@ -38,45 +36,45 @@
                     <div class="row padded">
                         <div class="col-6">
                             <div class="header-text">
-                                <div id="main-header">BackBeat PRO 2</div>
-                                <div id="secondary-header">From sound to silence and back.</div>
+                                <div id="main-header">Voyager 3200</div>
+                                <div id="secondary-header">Designed for your non-stop life.</div>
                             </div>
                             <div class="features">
                                 <h3>KEY FEATURES</h3>
                                 <ul>
                                     <li class="main-feature" id="feature1">
-                                        Immersive, High-Res Sound
+                                        Charging Case Enables up to 10 Hours Talk Time
                                         <ul>
-                                            <li>Immersive, high-res sound, and powerful speaker drivers deliver the right balance of rich bass, crisp highs, and natural mid-tones for your music.</li>
+                                            <li>Rechargeable case tops up headset, adding up to 10 more hours of talk time, plus it shows the charge status of both headset and case.</li>
                                         </ul>
                                     </li>
                                     <li class="main-feature" id="feature2">
-                                        Active Noise Cancelling (ANC)
+                                        Eliminates Disruptive Noise
                                         <ul>
-                                            <li>Switch on active noise cancelling (ANC) to minimize ambient noise while working or traveling.</li>
+                                            <li>Multiple microphones and signature Plantronics audio technology eliminate disruptive background noise so your caller hears you, not your surroundings.</li>
                                         </ul>
                                     </li>
                                     <li class="main-feature" id="feature3">
-                                        24-Hour Streaming
+                                        Sensors Route and Auto‐Answer Calls
                                         <ul>
-                                            <li>Enjoy up to 24 hours of wireless music, movies and calls before choosing the cabled connection or recharging.</li>
+                                            <li>Responsive sensors redirect calls to your phone or headset, pause music for incoming calls, and automatically answer calls as you place the headset on your ear.</li>
                                         </ul>
                                     </li>
                                     <div class="show-more">
                                         <li class="main-feature">
-                                            Wireless Freedom
+                                            Voice Commands Answer Calls and Check Status
                                         </li>
                                         <li class="main-feature">
-                                            Smart Power Management
+                                            Announces Incoming Caller ID
                                         </li>
                                         <li class="main-feature">
-                                            Hear Your Surroundings
+                                            Wideband‐Ready for HD Voice
                                         </li>
                                     </div>
                                     <li class="view-more">
                                         View More...
                                     </li>
-                                    <img src="media/pltLogo.png" class="pltImage modalClick" onClick="video_url('https://www.youtube.com/embed/0HAcFKN6xtc?rel=0&autoplay=1&showinfo=0&controls=2');">
+                                    <img src="media/pltLogo.png" class="pltImage modalClick" onClick="video_url('https://www.youtube.com/embed/iexNCvNSaHk?rel=0&autoplay=1&showinfo=0&controls=2');">
                                 </ul>
                             </div>
                         </div>
@@ -84,7 +82,7 @@
                             <div class="center">
                                 <div class="spot-container">
                                     <div class="product">
-                                        <img src="media/exhibit1/product-0.png" class="prodImg">
+                                        <img src="media/exhibit1/product-0.png" id="voyager-edge" class="prodImg">
                                     </div>
                                     <div id="spot1-off" class="spot"></div>
                                     <div id="spot2-off" class="spot"></div>
@@ -93,50 +91,51 @@
                             </div>
                         </div>
                     </div>
-                    <div id="footer"></div>
+                    <div id="footer1"></div>
                 </div>
                 <div class="swiper-slide" id="container2">
                     <div class="row padded">
                         <div class="col-6">
                             <div class="header-text">
-                                <div id="main-header">BackBeat 300 Series</div>
-                                <div id="secondary-header">Move freely while breaking a sweat.</div>
+                                <div id="main-header">Voyager 8200 UC</div>
+                                <div id="secondary-header">Make your place a perfect workplace.</div>
                             </div>
                             <div class="features">
                                 <h3>KEY FEATURES</h3>
                                 <ul>
                                     <li class="main-feature" id="feature4">
-                                        Ultra-light and Portable
+                                        Multi-device Connectivity
                                         <ul>
-                                            <li>Comfortable all-day wearing with portable, ultra-lightweight design.</li>
+                                            <li>By staying connected to two devices at once, you'll never miss a call. Play music or answer your phone simply by putting on the headset, and pause your media player or mute a call by taking it off. A dedicated button gives you quick access to mute, while voice prompts alert you if you're on mute when you start talking.</li>
                                         </ul>
                                     </li>
                                     <li class="main-feature" id="feature5">
-                                        Sweat and Moisture Protection
+                                        Boomless Design
                                         <ul>
-                                            <li>With IPX5-rated water-resistance, sweatproof design and military-grade nano-coating, these earbudgs were built to take on a sweat, rain and spills.</li>
+                                            <li>Features dual-paired omni-directional microphones and enhanced noise canceling.</li>
                                         </ul>
                                     </li>
                                     <li class="main-feature" id="feature6">
-                                        Secure Fit Eartip Design
+                                        Rich Audio
                                         <ul>
-                                            <li>The patent-pending, occlusive eartip design blocks out noise and stays secure during active use.</li>
+                                            <li>Immerse yourself in rich audio. Hear music and conversations with complete clarity. All tones, from high to low and everything in between, sound full and natural.</li>
                                         </ul>
                                     </li>
                                     <div class="show-more">
                                         <li class="main-feature">
-                                            Enjoy up to 6 hours of wireless listening
+                                            Enjoy up to 24 hours of wireless music, movies and calls
                                         </li>
                                         <li class="main-feature">
-                                            Stay charged w/ deep sleep mode
+                                            Smarter Sensor Technology
                                         </li>
                                         <li class="main-feature">
-                                            echargeable storage pouch
+                                            Dynamic Mute Alert
                                         </li>
                                     </div>
                                     <li class="view-more">
                                         View More...
                                     </li>
+                                    <img src="media/pltLogo.png" class="pltImage modalClick" onClick="video_url('https://www.youtube.com/embed/UTZQyY1Yp3k?rel=0&autoplay=1&showinfo=0&controls=2');">
                                 </ul>
                             </div>
                         </div>
@@ -144,7 +143,7 @@
                             <div class="center">
                                 <div class="spot-container">
                                     <div class="product">
-                                        <img src="media/exhibit1/product-1.png" class="prodImg">
+                                        <img src="media/exhibit1/product-1.png" id="voyager-8200" class="prodImg">
                                     </div>
                                     <div id="spot4-off" class="spot"></div>
                                     <div id="spot5-off" class="spot"></div>
@@ -154,128 +153,6 @@
                         </div>
                     </div>
                     <div id="footer2"></div>
-                </div>
-                <div class="swiper-slide" id="container3">
-                    <div class="row padded">
-                        <div class="col-6">
-                            <div class="header-text">
-                                <div id="main-header">BackBeat 500 Series</div>
-                                <div id="secondary-header">Step up to a wireless experience.</div>
-                            </div>
-                            <div class="features">
-                                <h3>KEY FEATURES</h3>
-                                <ul>
-                                    <li class="main-feature" id="feature7">
-                                        Multi-device Connectivity
-                                        <ul>
-                                            <li>Multipoint Bluetooth lets you automatically connect up to two devices simultaneously, and pair up to eight.</li>
-                                        </ul>
-                                    </li>
-                                    <li class="main-feature" id="feature8">
-                                        Immersive Audio
-                                        <ul>
-                                            <li>Advanced acoustic technology delivers the right balance and deep, rich sound.</li>
-                                        </ul>
-                                    </li>
-                                    <li class="main-feature" id="feature9">
-                                        DeepSleep Mode
-                                        <ul>
-                                            <li>DeepSleep hibernation mode maintains battery charge for up to six months when your headphones are out of range or left on.</li>
-                                        </ul>
-                                    </li>
-                                    <div class="show-more">
-                                        <li class="main-feature">
-                                            Enjoy up to 18 hours of wireless listening
-                                        </li>
-                                        <li class="main-feature">
-                                            Easy on-ear controls
-                                        </li>
-                                        <li class="main-feature">
-                                            Memory Foam Earcups
-                                        </li>
-                                    </div>
-                                    <li class="view-more">
-                                        View More...
-                                    </li>
-                                    <img src="media/pltLogo.png" class="pltImage modalClick" onClick="video_url('https://www.youtube.com/embed/fj-tTjIvkl4?rel=0&autoplay=1&showinfo=0&controls=2');">
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col-6">
-                            <div class="center">
-                                <div class="spot-container">
-                                    <div class="product">
-                                        <img src="media/exhibit1/product-2.png" id="bb500">
-                                    </div>
-                                    <div id="spot7-off" class="spot"></div>
-                                    <div id="spot8-off" class="spot"></div>
-                                    <div id="spot9-off" class="spot"></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div id="footer3"></div>
-                </div>
-                <div class="swiper-slide" id="container4">
-                    <div class="row padded">
-                        <div class="col-6">
-                            <div class="header-text">
-                                <div id="main-header">BackBeat FIT</div>
-                                <div id="secondary-header">As unstoppable as you are.</div>
-                            </div>
-                            <div class="features">
-                                <h3>KEY FEATURES</h3>
-                                <ul>
-                                    <li class="main-feature" id="feature10">
-                                        Stable, Comfortable Fit
-                                        <ul>
-                                            <li>Flexible design fits comfortably and stays put for all levels of exercise.</li>
-                                        </ul>
-                                    </li>
-                                    <li class="main-feature" id="feature11">
-                                        Sweatproof and Waterproof* Coating by P2i
-                                        <ul>
-                                            <li>Protected by a P2i nano-coating, these headphones deliver sweatproof durability and meet the IP57 rating for withstanding fresh water up to one meter for 30 minutes.</li>
-                                        </ul>
-                                    </li>
-                                    <li class="main-feature" id="feature12">
-                                        On-Ear Controls for Calls and Music
-                                        <ul>
-                                            <li>Easy controls let you keep moving while you control your music or calls.</li>
-                                        </ul>
-                                    </li>
-                                    <div class="show-more">
-                                        <li class="main-feature">
-                                            Safety-Oriented Eartip Design
-                                        </li>
-                                        <li class="main-feature">
-                                            Smartphone Armband
-                                        </li>
-                                        <li class="main-feature">
-                                            Up to Eight Hours of Listening Time 
-                                        </li>
-                                    </div>
-                                    <li class="view-more">
-                                        View More...
-                                    </li>
-                                    <img src="media/pltLogo.png" class="pltImage modalClick" onClick="video_url('https://www.youtube.com/embed/YerlEgHNWdE?rel=0&autoplay=1&showinfo=0&controls=2');">
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col-6">
-                            <div class="center">
-                                <div class="spot-container">
-                                    <div class="product">
-                                        <img src="media/exhibit1/product-3.png" id="bbfit" class="prodImg">
-                                    </div>
-                                    <div id="spot10-off" class="spot"></div>
-                                    <div id="spot11-off" class="spot"></div>
-                                    <div id="spot12-off" class="spot"></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div id="footer4"></div>
                 </div>
             </div>
             <!-- Add Pagination -->
@@ -370,7 +247,7 @@
             
             $('.main-feature').click(function() {
                 var _this = $(this);
-                for( var i = 1; i <= 12; i++){
+                for( var i = 1; i <= 6; i++){
                     if($(this)[0].id == "feature" + i){
                         if($("#spot" + i + "-off").length == 0){
                             $("#spot" + i).attr("id", "spot" + i + "-off");
