--- a/EBC_App/www/screensavers/BLACKWIRE500-screensaver.html
+++ b/EBC_App/www/screensavers/BLACKWIRE500-screensaver.html
@@ -4,25 +4,25 @@
         <title></title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="../css/style_exhibit1.css">
+        <link rel="stylesheet" href="../css/style_exhibit2.css">
         <style>
         body{
             height: 768px;
             width: 1024px;
-            background: url("../media/exhibit1/background1.png") no-repeat;
+            background: url("../media/exhibit2/background1.png") no-repeat;
             font-family: 'Lato', sans-serif;
         }
-        #footer1{
+        #footer{
             opacity: 0.5;
-            bottom: -593px;
+            bottom: -125px;
             height: 175px;
         }
         .prodImg{
-            height: 325px;
+            height: 460px;
             position: absolute;
             z-index: 10;
-            left: 26px;
-            top: 239px;
+            left: 80px;
+            top: 90px;
 
         }
         #main-header{
@@ -33,8 +33,8 @@
             max-width: 500px;
         }
         .text-screensaver{
-            margin-top: 240px;
-            margin-left: -80px;
+            margin-top: 186px;
+            margin-left: -25px;
             position: absolute;
         }
         #footer-text{
@@ -49,16 +49,16 @@
     <body>
         <div class="row">
                 <div class="col-6">
-                    <img src="../media/exhibit1/product-0.png" class="prodImg">
+                    <img src="../media/exhibit2/product-0.png" class="prodImg">
                 </div>
                 <div class="col-6">
                     <div class="text-screensaver">
-                        <div id="main-header" class="header-0">Voyager 3200</div>
-                        <div id="secondary-header">Designed for your non-stop life.</div>
+                        <div id="main-header" class="header-0">Blackwire 500 Series</div>
+                        <div id="secondary-header">Corded reliability that's ready when you are.</div>
                     </div>
                 </div>
         </div>
         <div id="footer-text">TAP TO START YOUR EXPERIENCE</div>
-        <div id="footer1"></div>
+        <div id="footer"></div>
     </body>
 </html>
