--- a/EBC_App/www/exhibit2.html
+++ b/EBC_App/www/exhibit2.html
@@ -22,55 +22,59 @@
                     <ul class="slideShow">
                         <li><img src="media/exhibit2/slide1.png"></li>
                         <li><img src="media/exhibit2/slide2.png"></li>
-                        <li><img src="media/exhibit2/slide3.png"></li>
-                        <li><img src="media/exhibit2/slide4.png"></li>
                     </ul>
                 </div>
             </div>
-
+            <div id="overlay">
+                <div id="modal">
+                    <span class="close">X</span>
+                    <iframe width="970" height="640" src="" frameborder="0" id="frame"></iframe>
+                </div>
+            </div>
             <div class="swiper-wrapper">
                 <div class="swiper-slide" id="container">
                     <div class="row padded">
                         <div class="col-6">
                             <div class="header-text">
-                                <div id="main-header">CS500 Series</div>
-                                <div id="secondary-header">Another CS family headed for the bestseller list.</div>
+                                <div id="main-header">Blackwire 500 Series</div>
+                                <div id="secondary-header">Corded reliability that's ready when you are.</div>
                             </div>
                             <div class="features">
                                 <h3>KEY FEATURES</h3>
                                 <ul>
                                     <li class="main-feature" id="feature1">
-                                        Simplified Call Management
+                                        Smart Sensort Technology
                                         <ul>
-                                            <li>Audio controls at your finger tips with one-touch call answer/end and volume adjust/mute simplifies desk phone call management.</li>
+                                            <li>Experience industry-first Smart Sensor™ technology that lets you answer a call by simply putting on the headset – making it the most productive and versatile corded headset on the market.</li>
                                         </ul>
                                     </li>
                                     <li class="main-feature" id="feature2">
-                                        Premium Sound Quality
+                                        Superior Audio Quality
                                         <ul>
-                                            <li>Roam up to 350 feet from your desk phone with DECT™ technology while eliminating interference from Wi-Fi networks; advanced wideband audio uses CAT-iq technology for high definition voice quality and enhanced Digital Signal Processing (DSP) for a more natural sound.</li>
+                                            <li>Offering PC wideband, noise-canceling microphone and hi-fi stereo sound (C520), the Blackwire 500 Series provides a truly outstanding audio experience – making it ideal for conference calls, webinars, listening to music and other multi-media. The Dynamic EQ feature optimizes your voice quality when on calls and automatically adjusts the EQ settings when you’re listening to music or multi-media.</li>
                                         </ul>
                                     </li>
                                     <li class="main-feature" id="feature3">
-                                        Innovative Design
+                                        Comfort and Portability
                                         <ul>
-                                            <li>Offers four sleek, comfort-tested wearing options designed to match your personal wearing style - including the lightest DECT™ wireless headset on the market.</li>
+                                            <li>Ultra-soft leatherette ear cushions and lightweight headband mean all-day comfort and a secure fit. Features ear cushions that fold flat, and includes a high-quality carrying case for easy storage and portability.</li>
                                         </ul>
                                     </li>
                                     <div class="show-more">
                                         <li class="main-feature">
-                                            Conference in Additional Headsets
+                                            Wearing Style Options
                                         </li>
                                         <li class="main-feature">
-                                            SoundGuard® Technology
+                                            Inline Controls
                                         </li>
                                         <li class="main-feature">
-                                            Adaptive Power
+                                            All-day Use
                                         </li>
                                     </div>
                                     <li class="view-more">
                                         View More...
                                     </li>
+                                    <img src="media/pltLogo.png" class="pltImage modalClick" onClick="video_url('https://www.youtube.com/embed/XGFVb6ZLeuY?rel=0&autoplay=1&showinfo=0&controls=2');">
                                 </ul>
                             </div>
                         </div>
@@ -78,7 +82,7 @@
                             <div class="center">
                                 <div class="spot-container">
                                     <div class="product">
-                                        <img src="media/exhibit2/product-0.png" class="prodImg">
+                                        <img src="media/exhibit2/product-0.png" class="prodImg" id="blackwire">
                                     </div>
                                     <div id="spot1-off" class="spot"></div>
                                     <div id="spot2-off" class="spot"></div>
@@ -148,126 +152,6 @@
                         </div>
                     </div>
                     <div id="footer2"></div>
-                </div>
-                <div class="swiper-slide" id="container3">
-                    <div class="row padded">
-                        <div class="col-6">
-                            <div class="header-text">
-                                <div id="main-header" style="line-height:1; width: 580px">Calisto 620 Bluetooth Speakerphone</div>
-                                <div id="secondary-header" style="margin-top: 10px;">The no cord, no fuss UC speakerphone.</div>
-                            </div>
-                            <div class="features" id="features-3">
-                                <h3>KEY FEATURES</h3>
-                                <ul>
-                                    <li class="main-feature" id="feature7">
-                                        Bluetooth Connectivity
-                                        <ul>
-                                            <li>Mini Bluetooth® USB adapter can be kept in a storage port under the speakerphone or left in your laptop for always-ready PC connectivity.</li>
-                                        </ul>
-                                    </li>
-                                    <li class="main-feature" id="feature8">
-                                        Unmatched Audio Clarity 
-                                        <ul>
-                                            <li>360⁰ full duplex audio and bi-directional microphones that activate in the direction of the speaker’s voice provides unmatched audio clarity.</li>
-                                        </ul>
-                                    </li>
-                                    <li class="main-feature" id="feature9">
-                                        Designed for Portability
-                                        <ul>
-                                            <li>Compact, lightweight, wireless design goes anywhere with a soft carrying case for secure portability.</li>
-                                        </ul>
-                                    </li>
-                                    <div class="show-more">
-                                        <li class="main-feature">
-                                            Simplified Call Management 
-                                        </li>
-                                        <li class="main-feature">
-                                            Integrated A2DP 
-                                        </li>
-                                        <li class="main-feature">
-                                            Talk-time up to 7 hours 
-                                        </li>
-                                    </div>
-                                    <li class="view-more">
-                                        View More...
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col-6">
-                            <div class="center">
-                                <div class="spot-container">
-                                    <div class="product">
-                                        <img src="media/exhibit2/product-2.png" id="calisto" class="prodImg">
-                                    </div>
-                                    <div id="spot7-off" class="spot"></div>
-                                    <div id="spot8-off" class="spot"></div>
-                                    <div id="spot9-off" class="spot"></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div id="footer3"></div>
-                </div>
-                <div class="swiper-slide" id="container4">
-                    <div class="row padded">
-                        <div class="col-6">
-                            <div class="header-text">
-                                <div id="main-header">Savi 700 Series</div>
-                                <div id="secondary-header">Multiple devices. Singular control.</div>
-                            </div>
-                            <div class="features">
-                                <h3>KEY FEATURES</h3>
-                                <ul>
-                                    <li class="main-feature" id="feature10">
-                                        Lightest DECT™ Wireless Headset on the Market
-                                        <ul>
-                                            <li>Manage PC, mobile and desk phone communications with the lightest DECT™ wireless headset on the market.</li>
-                                        </ul>
-                                    </li>
-                                    <li class="main-feature" id="feature11">
-                                        Three Comfortable, Customizable Wearing Styles 
-                                        <ul>
-                                            <li>Choose from three comfort-tested and customizable wearing options to match your personal style.</li>
-                                        </ul>
-                                    </li>
-                                    <li class="main-feature" id="feature12">
-                                        Hot Swappable Battery*
-                                        <ul>
-                                            <li>Hot swappable battery* lets you change battery mid-conversation delivering unlimited talk time. *Additional battery sold separately.</li>
-                                        </ul>
-                                    </li>
-                                    <div class="show-more">
-                                        <li class="main-feature">
-                                            One Intelligent Headset to Manage your PC, Mobile and Desk Phone Calls
-                                        </li>
-                                        <li class="main-feature">
-                                            Wireless Freedom up to 350 feet From Your Desk
-                                        </li>
-                                        <li class="main-feature">
-                                            One-Touch Call Answer/end, vol +/-, Mute and Flash Controls Across Devices 
-                                        </li>
-                                    </div>
-                                    <li class="view-more">
-                                        View More...
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col-6">
-                            <div class="center">
-                                <div class="spot-container">
-                                    <div class="product">
-                                        <img src="media/exhibit2/product-3.png" class="prodImg">
-                                    </div>
-                                    <div id="spot10-off" class="spot"></div>
-                                    <div id="spot11-off" class="spot"></div>
-                                    <div id="spot12-off" class="spot"></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div id="footer4"></div>
                 </div>
             </div>
             <!-- Add Pagination -->
@@ -362,7 +246,7 @@
             
             $('.main-feature').click(function() {
                 var _this = $(this);
-                for( var i = 1; i <= 12; i++){
+                for( var i = 1; i <= 6; i++){
                     if($(this)[0].id == "feature" + i){
                         if($("#spot" + i + "-off").length == 0){
                             $("#spot" + i).attr("id", "spot" + i + "-off");
