--- a/EBC_App/www/exhibit3.html
+++ b/EBC_App/www/exhibit3.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Exhibit 2</title>
+        <title>Exhibit 3</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
         <link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css" />
         <script src="js/jquery-1.11.1.min.js"></script>
@@ -10,7 +10,7 @@
         <script src="js/jquery-ui.min.js"></script>
         <!-- Link Swiper's CSS -->
         <link rel="stylesheet" href="css/swiper.css">
-        <link rel="stylesheet" href="css/style_exhibit2.css">
+        <link rel="stylesheet" href="css/style_exhibit3.css">
         <link href="css/lato.css" rel="stylesheet">
         <link href="css/roboto.css" rel="stylesheet">
     </head>
@@ -20,136 +20,19 @@
             <div id="screensaver">
                 <div class="slideShowContainer">
                     <ul class="slideShow">
-                        <li><img src="media/exhibit2/slide1.png"></li>
-                        <li><img src="media/exhibit2/slide2.png"></li>
-                        <li><img src="media/exhibit2/slide3.png"></li>
-                        <li><img src="media/exhibit2/slide4.png"></li>
+                        <li><img src="media/exhibit3/slide1.png"></li>
+                        <li><img src="media/exhibit3/slide2.png"></li>
                     </ul>
                 </div>
             </div>
-
+            <div id="overlay">
+                <div id="modal">
+                    <span class="close">X</span>
+                    <iframe width="970" height="640" src="" frameborder="0" id="frame"></iframe>
+                </div>
+            </div>
             <div class="swiper-wrapper">
                 <div class="swiper-slide" id="container">
-                    <div class="row padded">
-                        <div class="col-6">
-                            <div class="header-text">
-                                <div id="main-header">CS500 Series</div>
-                                <div id="secondary-header">Another CS family headed for the bestseller list.</div>
-                            </div>
-                            <div class="features">
-                                <h3>KEY FEATURES</h3>
-                                <ul>
-                                    <li class="main-feature" id="feature1">
-                                        Simplified Call Management
-                                        <ul>
-                                            <li>Audio controls at your finger tips with one-touch call answer/end and volume adjust/mute simplifies desk phone call management.</li>
-                                        </ul>
-                                    </li>
-                                    <li class="main-feature" id="feature2">
-                                        Premium Sound Quality
-                                        <ul>
-                                            <li>Roam up to 350 feet from your desk phone with DECT™ technology while eliminating interference from Wi-Fi networks; advanced wideband audio uses CAT-iq technology for high definition voice quality and enhanced Digital Signal Processing (DSP) for a more natural sound.</li>
-                                        </ul>
-                                    </li>
-                                    <li class="main-feature" id="feature3">
-                                        Innovative Design
-                                        <ul>
-                                            <li>Offers four sleek, comfort-tested wearing options designed to match your personal wearing style - including the lightest DECT™ wireless headset on the market.</li>
-                                        </ul>
-                                    </li>
-                                    <div class="show-more">
-                                        <li class="main-feature">
-                                            Conference in Additional Headsets
-                                        </li>
-                                        <li class="main-feature">
-                                            SoundGuard® Technology
-                                        </li>
-                                        <li class="main-feature">
-                                            Adaptive Power
-                                        </li>
-                                    </div>
-                                    <li class="view-more">
-                                        View More...
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col-6">
-                            <div class="center">
-                                <div class="spot-container">
-                                    <div class="product">
-                                        <img src="media/exhibit2/product-0.png" class="prodImg">
-                                    </div>
-                                    <div id="spot1-off" class="spot"></div>
-                                    <div id="spot2-off" class="spot"></div>
-                                    <div id="spot3-off" class="spot"></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div id="footer"></div>
-                </div>
-                <div class="swiper-slide" id="container2">
-                    <div class="row padded">
-                        <div class="col-6">
-                            <div class="header-text">
-                                <div id="main-header">EncorePro 720</div>
-                                <div id="secondary-header">Anything else is just a headset.</div>
-                            </div>
-                            <div class="features">
-                                <h3>KEY FEATURES</h3>
-                                <ul>
-                                    <li class="main-feature" id="feature4">
-                                        Luxurious Comfort. Distinctive Design.
-                                        <ul>
-                                            <li>Elegant, satin finish and slim, stylish design make anyone proud to wear it.</li>
-                                        </ul>
-                                    </li>
-                                    <li class="main-feature" id="feature5">
-                                        Exceptional Audio
-                                        <ul>
-                                            <li>Unique, extendable boom ensures precise positioning, enables optimal noise cancelation, and means customers hear every word.</li>
-                                        </ul>
-                                    </li>
-                                    <li class="main-feature" id="feature6">
-                                        Long-Term Reliability
-                                        <ul>
-                                            <li>Designed for the rigors of call-intensive environments, minimizing operational disruptions and costly downtime.</li>
-                                        </ul>
-                                    </li>
-                                    <div class="show-more">
-                                        <li class="main-feature">
-                                            Conveniently Situated Microphone Arm
-                                        </li>
-                                        <li class="main-feature">
-                                            Wideband Audio 
-                                        </li>
-                                        <li class="main-feature">
-                                            Reinforced, Lightweight Headband 
-                                        </li>
-                                    </div>
-                                    <li class="view-more">
-                                        View More...
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col-6">
-                            <div class="center">
-                                <div class="spot-container">
-                                    <div class="product">
-                                        <img src="media/exhibit2/product-1.png" class="prodImg">
-                                    </div>
-                                    <div id="spot4-off" class="spot"></div>
-                                    <div id="spot5-off" class="spot"></div>
-                                    <div id="spot6-off" class="spot"></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div id="footer2"></div>
-                </div>
-                <div class="swiper-slide" id="container3">
                     <div class="row padded">
                         <div class="col-6">
                             <div class="header-text">
@@ -159,19 +42,19 @@
                             <div class="features" id="features-3">
                                 <h3>KEY FEATURES</h3>
                                 <ul>
-                                    <li class="main-feature" id="feature7">
+                                    <li class="main-feature" id="feature1">
                                         Bluetooth Connectivity
                                         <ul>
                                             <li>Mini Bluetooth® USB adapter can be kept in a storage port under the speakerphone or left in your laptop for always-ready PC connectivity.</li>
                                         </ul>
                                     </li>
-                                    <li class="main-feature" id="feature8">
+                                    <li class="main-feature" id="feature2">
                                         Unmatched Audio Clarity 
                                         <ul>
                                             <li>360⁰ full duplex audio and bi-directional microphones that activate in the direction of the speaker’s voice provides unmatched audio clarity.</li>
                                         </ul>
                                     </li>
-                                    <li class="main-feature" id="feature9">
+                                    <li class="main-feature" id="feature3">
                                         Designed for Portability
                                         <ul>
                                             <li>Compact, lightweight, wireless design goes anywhere with a soft carrying case for secure portability.</li>
@@ -191,6 +74,7 @@
                                     <li class="view-more">
                                         View More...
                                     </li>
+                                    <img src="media/pltLogo.png" class="pltImage modalClick" onClick="video_url('https://www.youtube.com/embed/xKWx76sk-dQ?rel=0&autoplay=1&showinfo=0&controls=2');">
                                 </ul>
                             </div>
                         </div>
@@ -198,18 +82,18 @@
                             <div class="center">
                                 <div class="spot-container">
                                     <div class="product">
-                                        <img src="media/exhibit2/product-2.png" id="calisto" class="prodImg">
+                                        <img src="media/exhibit3/product-0.png" id="calisto" class="prodImg">
                                     </div>
-                                    <div id="spot7-off" class="spot"></div>
-                                    <div id="spot8-off" class="spot"></div>
-                                    <div id="spot9-off" class="spot"></div>
+                                    <div id="spot1-off" class="spot"></div>
+                                    <div id="spot2-off" class="spot"></div>
+                                    <div id="spot3-off" class="spot"></div>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div id="footer3"></div>
                 </div>
-                <div class="swiper-slide" id="container4">
+                <div class="swiper-slide" id="container2">
                     <div class="row padded">
                         <div class="col-6">
                             <div class="header-text">
@@ -219,19 +103,19 @@
                             <div class="features">
                                 <h3>KEY FEATURES</h3>
                                 <ul>
-                                    <li class="main-feature" id="feature10">
+                                    <li class="main-feature" id="feature4">
                                         Lightest DECT™ Wireless Headset on the Market
                                         <ul>
                                             <li>Manage PC, mobile and desk phone communications with the lightest DECT™ wireless headset on the market.</li>
                                         </ul>
                                     </li>
-                                    <li class="main-feature" id="feature11">
+                                    <li class="main-feature" id="feature5">
                                         Three Comfortable, Customizable Wearing Styles 
                                         <ul>
                                             <li>Choose from three comfort-tested and customizable wearing options to match your personal style.</li>
                                         </ul>
                                     </li>
-                                    <li class="main-feature" id="feature12">
+                                    <li class="main-feature" id="feature6">
                                         Hot Swappable Battery*
                                         <ul>
                                             <li>Hot swappable battery* lets you change battery mid-conversation delivering unlimited talk time. *Additional battery sold separately.</li>
@@ -258,11 +142,11 @@
                             <div class="center">
                                 <div class="spot-container">
                                     <div class="product">
-                                        <img src="media/exhibit2/product-3.png" class="prodImg">
+                                        <img src="media/exhibit3/product-1.png" class="prodImg">
                                     </div>
-                                    <div id="spot10-off" class="spot"></div>
-                                    <div id="spot11-off" class="spot"></div>
-                                    <div id="spot12-off" class="spot"></div>
+                                    <div id="spot4-off" class="spot"></div>
+                                    <div id="spot5-off" class="spot"></div>
+                                    <div id="spot6-off" class="spot"></div>
                                 </div>
                             </div>
                         </div>
@@ -274,7 +158,7 @@
             <div class="swiper-pagination"></div>
         </div>
         <!-- Swiper JS -->
-        <script src="js/swiper_exhibit2.js"></script>
+        <script src="js/swiper_exhibit3.js"></script>
         <!-- Initialize Swiper -->
         <script>
             var mousetimeout;
@@ -362,7 +246,7 @@
             
             $('.main-feature').click(function() {
                 var _this = $(this);
-                for( var i = 1; i <= 12; i++){
+                for( var i = 1; i <= 6; i++){
                     if($(this)[0].id == "feature" + i){
                         if($("#spot" + i + "-off").length == 0){
                             $("#spot" + i).attr("id", "spot" + i + "-off");
