adding exhibit 4 to plamex

--- a/EBC_App/www/screensavers/BB500-screensaver.html
+++ b/EBC_App/www/screensavers/BB500-screensaver.html
@@ -4,15 +4,15 @@
         <title></title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="../css/style_exhibit1.css">
+        <link rel="stylesheet" href="../css/style_exhibit4.css">
         <style>
         body{
             height: 768px;
             width: 1024px;
-            background: url("../media/exhibit1/background4.png") no-repeat;
+            background: url("../media/exhibit4/background1.png") no-repeat;
             font-family: 'Lato', sans-serif;
         }
-        #footer4{
+        #footer{
             opacity: 0.5;
             bottom: -594px;
             height: 175px;
@@ -49,7 +49,7 @@
     <body>
         <div class="row">
                 <div class="col-6">
-                    <img src="../media/exhibit1/product-2.png" class="prodImg">
+                    <img src="../media/exhibit4/product-0.png" class="prodImg">
                 </div>
                 <div class="col-6">
                     <div class="text-screensaver">
@@ -59,6 +59,6 @@
                 </div>
         </div>
         <div id="footer-text">TAP TO START YOUR EXPERIENCE</div>
-        <div id="footer4"></div>
+        <div id="footer"></div>
     </body>
 </html>
